[package]
name = "egui_nerdfonts"
description = "Nerdfonts icons for egui"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/bernsteining/egui_nerdfonts"
repository = "https://github.com/bernsteining/egui_nerdfonts"
keywords = ["egui", "nerdfonts", "icons", "symbols", "font"]
categories = ["gui"]

[dependencies]
egui = { version = "0.30", default-features = false }

[dev-dependencies]
eframe = "0.30"

[[example]]
name = "rust_logo"
